<resources>
    <string name="app_name">Notesapp</string>
    <string name="name">Joker</string>
    <string name="author">Todd Phillips</string>
    <string name="season">1</string>
    <string name="season_text">Joker</string>
    <string name="description">2019 American psychological drama and thriller film distributed by Warner Bros. Pictures and based on the DC Comics character Joker.</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">Notes App</string>
    <string name="subtitle_activity_main">List</string>
    <string name="subtitle_add_moovie_activity_main">Add Note</string>
    <string name="title_activity_basic2">Basic</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="txt_moovie_name">Name</string>
    <string name="txt_moovie_author">Author</string>
    <string name="txt_movie_url_imagen">Url Picture</string>
    <string name="txt_main_description">Description</string>
    <string name="txt_add_moovie_text_button">Add</string>
    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>
    <string name="add_movie">Add Note</string>
    <string name="delete_movie">Delete Note</string>
    <string name="imagenposter">imagenPoster</string>
    <string name="imagenposterbg">imagenposter-bg</string>
    <string name="borrar_peli">Delete Note</string>
    <string name="msgEmptyFields">Some elements dont have been filled yet, please check!</string>
    <string name="msgMovieSaved">Note has been registered successfully</string>
    <string name="msgDefaultMovieSaved">Default Notes has been registered successfully</string>
    <string name="msgMovieDeleted">Note has been deleted successfully</string>
    <string name="notes_title">Title</string>
    <string name="notes_sub_title">Subtitle</string>
    <string name="web_url">URL</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="notes_desc">Description</string>
    <string name="httptext">http://</string>
    <string name="back_text">Back</string>
    <string name="confirm_text">Confirm</string>
    <string name="get_image">Get Image</string>
    <string name="delete_text">Delete</string>
    <string name="more_text">More</string>
    <string name="msgBackButton">The note its doesnt  have changes</string>
</resources>
