<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetActivityNote">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@color/ColorBlackNote"
        android:textSize="@dimen/fontSizeLblName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="@dimen/fontSizeLblAuthor"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorTextYellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_delete_movie_fsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/ColorBlackNote"
        android:textColor="@color/black"


        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView"
        app:layout_constraintEnd_toEndOf="@+id/subtitleTextView"
        android:layout_marginTop="8dp"


        android:contentDescription="@string/borrar_peli"
        app:backgroundTint="@color/design_default_color_on_primary"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/descriptionTextView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@color/ColorBlackNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete_movie_fsd"
        android:textSize="@dimen/fontSizeLblDescription"/>
</androidx.constraintlayout.widget.ConstraintLayout>