<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AddNote">

    <ImageView
        android:id="@+id/imgAddNoteBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_back_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/ColorWhite"
        android:contentDescription="@string/back_text" />

    <ImageView
        android:id="@+id/imgAddNoteDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_confirm_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/ColorWhite"
        android:contentDescription="@string/confirm_text" />





















    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/LayOutAddNotePriorityVal"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:ellipsize="end"

        app:layout_constraintTop_toBottomOf="@id/imgAddNoteBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnAddNoteLowPriority"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/ColorYellow"
            android:fontFamily="sans-serif-light"
            android:text="Low Priority"
            android:textAllCaps="false"
            android:textColor="@color/ColorWhite"
            android:textSize="12sp" />




        <Button
            android:id="@+id/btnAddNoteMaxPriority"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-light"
            android:text="Max Priority"
            android:textAllCaps="false"
            android:textColor="@color/ColorWhite"
            android:textSize="12sp" />


    </LinearLayout>




























    <EditText
        android:id="@+id/etAddNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:hint="@string/notes_title"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayOutAddNotePriorityVal"
        android:autofillHints="" />


    <TextView
        android:id="@+id/tvAddNoteDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/ColorWhite"
        android:background="@color/ColorBlackNote"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAddNoteTitle" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddNoteDateTime">


        <View
            android:id="@+id/colorAddNoteView"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@color/ColorBlue" />

        <EditText
            android:id="@+id/etAddNoteSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:hint="@string/notes_sub_title"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/ColorWhite"
            android:textColorHint="@color/ColorGray"
            android:textSize="23sp"
            android:autofillHints="" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/addNoteLayoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/l1">



        <ImageView
            android:id="@+id/imgAddNote"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/get_image" />

        <ImageView
            android:id="@+id/imgAddNoteDelete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_delete_foreground"
            android:contentDescription="@string/delete_text" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWebUrl"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNoteLayoutImage"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etAddNoteWebLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="sans-serif-light"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@string/httptext"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorGray"
                android:textSize="12sp"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/imgAddNoteUrlDelete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_cancel_24_foreground"
                android:contentDescription="@string/delete_text" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="sans-serif-light"
                android:background="@color/colorAccent"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/ColorWhite"
                android:id="@+id/btnAddNoteCancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="sans-serif-light"
                android:background="@color/colorAccent"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/ColorWhite"
                android:id="@+id/btnAddNoteOk"/>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvAddNoteWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:visibility="gone"
        android:fontFamily="sans-serif-light"
        android:padding="10dp"
        android:textColor="@color/ColorGray"
        android:textColorHint="@color/ColorGray"
        android:textSize="12sp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

    <EditText
        android:id="@+id/etAddNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:hint="@string/notes_desc"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddNoteWebLink"
        android:importantForAutofill="no" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgAddNoteMore"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_delete_foreground"
            android:visibility="invisible"
            android:contentDescription="@string/more_text" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>